--- a/charts/arr/templates/statefulset-radarr.yaml
+++ b/charts/arr/templates/statefulset-radarr.yaml
@@ -42,67 +42,15 @@ spec:
           - name: health-data
             mountPath: /in
           - name: health
-            mountPath: /out   
+            mountPath: /out  
         - name: permission-fix
           image: busybox
           command: ['sh', '-c']
           args: ['chmod -R 655 /out']
           volumeMounts:
           - name: health
-            mountPath: /out     
-        - name: rclone-config
-          image: "busybox"
-          command:
-            - cp
-          args:
-            - -v
-            - /in/rclone.conf
-            - /out/rclone.conf
-          volumeMounts:
-            - name: rclone-config
-              mountPath: /in
-            - name: rclone-data
-              mountPath: /out
-        - name: import-wireguard-config
-          image: "busybox"
-          command:
-            - cp
-          args:
-            - -v
-            - /in/wg6.conf
-            - /out/wg6.conf
-          volumeMounts:
-            - name: wireguard-config
-              mountPath: /in
-            - name: wireguard-data
-              mountPath: /out                     
-      containers:
-        - image: luiscajl/rclone-wireguard
-          name: rclone-wireguard
-          imagePullPolicy: Always
-          securityContext:
-            {{- toYaml .Values.securityContext | nindent 12 }}
-          resources:
-            requests:
-              cpu: "20m"
-              memory: "55M"
-            limits:
-              cpu: "1000m"
-              memory: "1000M"  
-          command:
-            [
-              "sh",
-              "-c",
-              "wg-quick up wg6 && rclone mount --config=/etc/rclone/rclone.conf rclone-with-cache: /data --log-level=INFO --umask 002  --vfs-cache-mode off  --tpslimit=7 --vfs-cache-mode off --allow-non-empty --allow-other --bind=10.10.10.6  ",
-            ]
-          volumeMounts:
-            - mountPath: /data
-              name: data
-              mountPropagation: Bidirectional
-            - mountPath: /etc/wireguard
-              name: wireguard-data
-            - mountPath: /etc/rclone
-              name: rclone-data         
+            mountPath: /out                                 
+      containers:      
         - name: {{ .Chart.Name }}
           securityContext:
             {{- toYaml .Values.securityContext | nindent 12 }}
@@ -149,7 +97,9 @@ spec:
             {{- toYaml .Values.resources | nindent 12 }}
       volumes:
         - name: data
-          emptyDir: {}
+          hostPath:
+            path: {{ .Values.data.path }}
+            type: Directory
         - name: health-data
           configMap:
             name: arr-health  
@@ -158,22 +108,6 @@ spec:
                 path: liveness.sh
         - name: health
           emptyDir: {}    
-        - name: wireguard-data
-          emptyDir: {}
-        - name: rclone-data
-          emptyDir: {}
-        - name: wireguard-config
-          configMap:
-            name: wireguard-config
-            items:
-              - key: wg6.conf
-                path: wg6.conf
-        - name: rclone-config
-          configMap:
-            name: rclone-config
-            items:
-              - key: rclone.conf
-                path: rclone.conf                    
       {{- with .Values.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
