--- a/charts/filebot-executor/templates/deployment.yaml
+++ b/charts/filebot-executor/templates/deployment.yaml
@@ -54,60 +54,8 @@ spec:
           args: ['chmod -R 777 /out']
           volumeMounts:
           - name: config
-            mountPath: /out   
-        - name: rclone-config
-          image: "busybox"
-          command:
-            - cp
-          args:
-            - -v
-            - /in/rclone.conf
-            - /out/rclone.conf
-          volumeMounts:
-            - name: rclone-config
-              mountPath: /in
-            - name: rclone-data
-              mountPath: /out
-        - name: import-wireguard-config
-          image: "busybox"
-          command:
-            - cp
-          args:
-            - -v
-            - /in/wg3.conf
-            - /out/wg3.conf
-          volumeMounts:
-            - name: wireguard-config
-              mountPath: /in
-            - name: wireguard-data
-              mountPath: /out                                   
-      containers:
-        - image: luiscajl/rclone-wireguard
-          name: rclone-wireguard
-          imagePullPolicy: Always
-          securityContext:
-            {{- toYaml .Values.securityContext | nindent 12 }}
-          resources:
-            requests:
-              cpu: "20m"
-              memory: "55M"
-            limits:
-              cpu: "1000m"
-              memory: "1000M"  
-          command:
-            [
-              "sh",
-              "-c",
-              "wg-quick up wg3 && rclone mount --config=/etc/rclone/rclone.conf rclone-with-cache: /data --log-level=INFO --umask 002  --vfs-cache-mode off  --tpslimit=7 --vfs-cache-mode off --allow-non-empty --allow-other --bind=10.10.10.3  ",
-            ]
-          volumeMounts:
-            - mountPath: /data
-              name: data
-              mountPropagation: Bidirectional
-            - mountPath: /etc/wireguard
-              name: wireguard-data
-            - mountPath: /etc/rclone
-              name: rclone-data       
+            mountPath: /out                           
+      containers:     
         - name: {{ .Chart.Name }}
           securityContext:
             {{- toYaml .Values.securityContext | nindent 12 }}
@@ -176,7 +124,9 @@ spec:
               name: config   
       volumes:
         - name: data
-          emptyDir: {}              
+          hostPath:
+            path: {{ .Values.data.path }}
+            type: Directory          
         - name: filebot-config
           persistentVolumeClaim:
             claimName: filebot-config-rwm    
@@ -187,23 +137,7 @@ spec:
               - key: liveness.sh
                 path: liveness.sh
         - name: config
-          emptyDir: {}   
-        - name: wireguard-data
-          emptyDir: {}
-        - name: rclone-data
-          emptyDir: {}
-        - name: wireguard-config
-          configMap:
-            name: wireguard-config
-            items:
-              - key: wg3.conf
-                path: wg3.conf
-        - name: rclone-config
-          configMap:
-            name: rclone-config
-            items:
-              - key: rclone.conf
-                path: rclone.conf                                             
+          emptyDir: {}                                 
       {{- with .Values.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
