--- a/charts/plex-rclone-wireguard/templates/configmap-health.yaml
+++ b/charts/plex-rclone-wireguard/templates/configmap-health.yaml
@@ -45,19 +45,7 @@ data:
   
       exit 1  # Fallo
     }
-    
-    # Punto de comprobación de disponibilidad (liveness-rclone)
-    liveness_rclone() {
-      # Verificar si el número de archivos en la carpeta es mayor que 4
-      file_count=$(ls /data  | wc -l)
-      if [[ $file_count -gt 4 ]]; then
-        echo "Rclone: OK"
-        exit 0  # Éxito
-      fi
-  
-      exit 1  # Fallo
-    }
-    
+        
     # Ejecutar el script según el argumento proporcionado
     case $1 in
       readiness)
@@ -65,12 +53,9 @@ data:
         ;;
       liveness)
         liveness
-        ;;
-      liveness-rclone)
-        liveness_rclone
-        ;;        
+        ;;     
       *)
-        echo "Comando no válido. Use 'readiness','liveness' o 'liveness-rclone'."
+        echo "Comando no válido. Use 'readiness','liveness'."
         exit 1
         ;;
     esac
