--- a/charts/plex-rclone-wireguard/templates/statefulset.yaml
+++ b/charts/plex-rclone-wireguard/templates/statefulset.yaml
@@ -49,99 +49,8 @@ spec:
           args: ['chmod -R 655 /out']
           volumeMounts:
           - name: health
-            mountPath: /out  
-        - name: rclone-config
-          image: "busybox"
-          command:
-            - cp
-          args:
-            - -v
-            - /in/rclone.conf
-            - /out/rclone.conf
-          volumeMounts:
-            - name: rclone-config
-              mountPath: /in
-            - name: rclone-data
-              mountPath: /out
-        - name: import-wireguard-config
-          image: "busybox"
-          command:
-            - cp
-          args:
-            - -v
-            - /in/wg7.conf
-            - /out/wg7.conf
-          volumeMounts:
-            - name: wireguard-config
-              mountPath: /in
-            - name: wireguard-data
-              mountPath: /out       
-        - name: add-init-script
-          image: "busybox"
-          command:
-            - cp
-          args:
-            - -v
-            - /in/init.sh
-            - /out/init.sh
-          volumeMounts:
-            - name: init-script-data
-              mountPath: /in
-            - name: init-script
-              mountPath: /out  
-        - name: permission-fix-init-script
-          image: busybox
-          command: ['sh', '-c']
-          args: ['chmod -R 777 /out']
-          volumeMounts:
-          - name: init-script
             mountPath: /out                                          
       containers:
-        - image: luiscajl/rclone-wireguard
-          name: rclone-wireguard
-          imagePullPolicy: Always
-          securityContext:
-            {{- toYaml .Values.securityContext | nindent 12 }}
-          resources:
-            requests:
-              cpu: "20m"
-              memory: "55M"
-            limits:
-              cpu: "1000m"
-              memory: "1000M"  
-          command:
-            [
-              "sh",
-              "-c",
-              "/tmp/init/init.sh",
-            ]
-          volumeMounts:
-            - mountPath: /data
-              name: data
-              mountPropagation: Bidirectional
-            - mountPath: /etc/wireguard
-              name: wireguard-data
-            - mountPath: /etc/rclone
-              name: rclone-data    
-            - mountPath: /health
-              name: health        
-            - mountPath: /tmp/init
-              name: init-script     
-          lifecycle:
-            preStop:
-              exec:
-                command: ["bash", "-c", "umount -f /data"]                                      
-          livenessProbe:
-            exec:
-              command:
-                - /bin/bash
-                - /health/health-script.sh
-                - liveness-rclone        
-            initialDelaySeconds: 15
-            periodSeconds: 15
-            timeoutSeconds: 5    
-            failureThreshold: 2   
-            successThreshold: 1
         - name: {{ .Chart.Name }}
           securityContext:
             {{- toYaml .Values.securityContext | nindent 12 }}
@@ -203,7 +112,9 @@ spec:
       volumes: 
       {{- if .Values.volumes.data.enabled }}
         - name: data
-          emptyDir: {}
+          hostPath:
+            path: {{ .Values.data.path }}
+            type: Directory
       {{- end }}                
         - name: health-data
           configMap:
@@ -212,31 +123,7 @@ spec:
               - key: health-script.sh
                 path: health-script.sh
         - name: health
-          emptyDir: {} 
-        - name: wireguard-data
-          emptyDir: {}
-        - name: rclone-data
-          emptyDir: {}
-        - name: init-script
-          emptyDir: {}               
-        - name: wireguard-config
-          configMap:
-            name: wireguard-config
-            items:
-              - key: wg7.conf
-                path: wg7.conf
-        - name: rclone-config
-          configMap:
-            name: rclone-config
-            items:
-              - key: rclone.conf
-                path: rclone.conf  
-        - name: init-script-data
-          configMap:
-            name: init-script-rclone-wireguard-for-plex
-            items:
-              - key: init.sh
-                path: init.sh                         
+          emptyDir: {}                          
   {{- if .Values.volumes.config.enabled }}
   volumeClaimTemplates:
     - metadata:
