--- a/charts/filebot-executor/templates/configmap-liveness.yaml
+++ b/charts/filebot-executor/templates/configmap-liveness.yaml
@@ -9,7 +9,7 @@ data:
     numFiles1=`ls $DIR1 | wc -l`
     numFiles2=`ls $DIR1 | wc -l`
     # echo $numFiles
-    if [[ $numFiles1 -gt 1 ]] && [[ "$(curl -sL -w '%{http_code}' http://localhost:8080/actuator/health/liveness -o /dev/null)" = "200"  ]];
+    if [[ "$(curl -sL -w '%{http_code}' http://localhost:8080/actuator/health/liveness -o /dev/null)" = "200"  ]];
     then
       echo 0
     else
