--- a/charts/qbittorrentvpn/templates/configmap-liveness.yaml
+++ b/charts/qbittorrentvpn/templates/configmap-liveness.yaml
@@ -8,7 +8,7 @@ data:
     DIR=/data
     numFiles=`ls $DIR | wc -l`
     echo "Numero de ficheros encontrados en la carpeta" $numFiles
-    if [[ $numFiles -gt 1 ]]  && [[ "$(curl -sL -w '%{http_code}' http://localhost:8081 -o /dev/null)" = "200"  ]];
+    if [[ "$(curl -sL -w '%{http_code}' http://localhost:8081 -o /dev/null)" = "200"  ]];
     #if [[ $numFiles -gt 1 ]];
     then
       echo "Liveness OK!"
