--- a/charts/arr/templates/statefulset-sonarr-en.yaml
+++ b/charts/arr/templates/statefulset-sonarr-en.yaml
@@ -49,6 +49,9 @@ spec:
             - name: http
               containerPort: {{ .Values.service.sonarr.port }}
               protocol: TCP
+              httpHeaders:
+                - name: Authorization
+                  value: Basic YWRtaW46YWRtaW4=              
           livenessProbe:
             httpGet:
               path: /status
@@ -62,6 +65,9 @@ spec:
             httpGet:
               path: /status
               port: http
+              httpHeaders:
+                - name: Authorization
+                  value: Basic YWRtaW46YWRtaW4=              
             initialDelaySeconds: 30
             timeoutSeconds: 10
             periodSeconds: 20
