--- a/charts/arr/templates/statefulset-sonarr.yaml
+++ b/charts/arr/templates/statefulset-sonarr.yaml
@@ -53,9 +53,9 @@ spec:
             httpGet:
               path: /status
               port: http
-              httpHeaders:
-                - name: Authorization
-                  value: Basic YWRtaW46YWRtaW4=              
+              # httpHeaders:
+              #   - name: Authorization
+              #     value: Basic YWRtaW46YWRtaW4=              
             initialDelaySeconds: 30
             timeoutSeconds: 10
             periodSeconds: 20
@@ -65,9 +65,9 @@ spec:
             httpGet:
               path: /status
               port: http
-              httpHeaders:
-                - name: Authorization
-                  value: Basic YWRtaW46YWRtaW4=              
+              # httpHeaders:
+              #   - name: Authorization
+              #     value: Basic YWRtaW46YWRtaW4=              
             initialDelaySeconds: 30
             timeoutSeconds: 5
             periodSeconds: 20
