--- a/charts/filebot-executor/templates/deployment.yaml
+++ b/charts/filebot-executor/templates/deployment.yaml
@@ -120,6 +120,7 @@ spec:
             - mountPath: /home/filebot
               name: filebot-config  
             - mountPath: /media
+              mountPropagation: Bidirectional
               name: data  
             - mountPath: /health
               name: config   
